# kolya

client/: client.cpp
server/: CMakeLists.txt
server/ServerFiles/: server-log.txt
server/src/headers/: server.h
server/src/sources/: main.cpp  server.cpp
